--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/node": "18.11.17",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "@vercel/speed-insights": "^1.2.0",
     "eslint": "8.30.0",
     "eslint-config-next": "13.2.4",
     "framer-motion": "^10.18.0",
